--- a/public/css/sass/buttons/_buttons.scss
+++ b/public/css/sass/buttons/_buttons.scss
@@ -1,13 +1,7 @@
 @import "button";
 
-/*** IMAGES ***
-@import "images";
+@import "shapes";
 
-/*** ICONS ***
 @import "icons";
 
-/*** NAMES ***
-@import "names";
-
-*/
-@import "shapes";
+@import "types.scss";
