--- a/public/css/sass/drim-share.scss
+++ b/public/css/sass/drim-share.scss
@@ -10,8 +10,9 @@
  ## LAYOUT
  ***********************************/
  @import "container";
- @import "wrapper";
  @import "container_mobile";
+ @import "wrapper";
+ @import "wrapper_mobile";
 
  /***********************************
  ## BUTTONS
