--- a/public/css/sass/_container_mobile.scss
+++ b/public/css/sass/_container_mobile.scss
@@ -1,7 +1,3 @@
-/***********************************
-## LAYOUT MOBILE
-***********************************/
-
 .ds_container_mobile {
 
   .ds_wrapper {
@@ -53,6 +49,7 @@
         }
 
         &.ds_mixed {
+          width: auto;
 
           a {
 
@@ -60,7 +57,6 @@
 
               &.anchor-grid {
                 grid-template-columns: 1fr;
-                grid-template-rows: 1fr;
               }
             }
           }
