--- a/admin/css/drim-share-admin.css
+++ b/admin/css/drim-share-admin.css
@@ -114,6 +114,7 @@ grid-template-columns: repeat(6,auto);
 }
 .ds_help_popup img {
   max-width: 100%;
+  max-height: 400px;
 }
 @media only screen and (max-width: 960px) {
   .ds_help_popup {
@@ -136,10 +137,10 @@ grid-template-columns: repeat(6,auto);
 
 
 .ds_part_right {
-max-width: 280px;
-background: #fff;
-padding: 20px;
-z-index: 2;
+  max-width: 280px;
+  padding: 20px;
+  background-color: #fff;
+  z-index: 2;
 }
 @media screen and (min-width: 1376px) {
  .ds_part_right {
@@ -148,6 +149,17 @@ z-index: 2;
    right: 20px;
  }
 }
+
+.fixed-top,
+.fixed-middle {
+  margin-bottom: 20px;
+  position: relative;
+}
+.ds_notice {
+  border-left: 4px solid #00a0d2;
+  padding-left: 12px;
+}
+
 .no_decoration,
 .no_decoration:hover {
  text-decoration: none;
@@ -170,6 +182,12 @@ z-index: 2;
 .separator {
  margin-top: 40px;
  margin-bottom: 20px;
+}
+.separator-big {
+  background-color: #f1f1f1;
+  height: 20px;
+  margin-left: -20px;
+  margin-right: -20px;
 }
 .ds_hidden {
  display: none;
