--- a/public/css/drim-share.css
+++ b/public/css/drim-share.css
@@ -8,29 +8,29 @@
 .ds_container .ds_wrapper {
   z-index: 9; }
   .ds_container .ds_wrapper .ds_heading {
-	display: none; }
+    display: none; }
 .ds_container:not(.ds_container_mobile) {
   position: fixed;
   top: calc( ( 100% - 10em ) / 2 );
   margin: 0; }
   .ds_container:not(.ds_container_mobile) .ds_wrapper {
-	grid-template-columns: 1fr;
-	grid-gap: 0;
-	padding: 0;
-	border: 0 none;
-	padding: 0; }
-	.ds_container:not(.ds_container_mobile) .ds_wrapper .ds_bttn {
-	  width: 2em; }
-	  .ds_container:not(.ds_container_mobile) .ds_wrapper .ds_bttn a svg.icon {
-		display: inline; }
-	  .ds_container:not(.ds_container_mobile) .ds_wrapper .ds_bttn a span.ds_network_name {
-		display: none; }
-	  .ds_container:not(.ds_container_mobile) .ds_wrapper .ds_bttn a span.anchor-item:nth-child(2) {
-		display: none; }
+    grid-template-columns: 1fr;
+    grid-gap: 0;
+    padding: 0;
+    border: 0 none;
+    padding: 0; }
+    .ds_container:not(.ds_container_mobile) .ds_wrapper .ds_bttn {
+      width: 2em; }
+      .ds_container:not(.ds_container_mobile) .ds_wrapper .ds_bttn a svg.icon {
+        display: inline; }
+      .ds_container:not(.ds_container_mobile) .ds_wrapper .ds_bttn a span.ds_network_name {
+        display: none; }
+      .ds_container:not(.ds_container_mobile) .ds_wrapper .ds_bttn a span.anchor-item:nth-child(2) {
+        display: none; }
   .ds_container:not(.ds_container_mobile).sticky_left {
-	left: 0; }
+    left: 0; }
   .ds_container:not(.ds_container_mobile).sticky_right {
-	right: 0; }
+    right: 0; }
 
 .ds_container_mobile .ds_wrapper {
   position: fixed;
@@ -40,10 +40,13 @@
   margin-bottom: 0;
   border-bottom-width: 0;
   padding: 6px;
-  background-color: #fff;
+  background-color: rgba(255, 255, 255, 0.95);
   z-index: 9999;
   grid-gap: 6px;
   grid-template-columns: repeat(6, auto); }
+  .ds_container_mobile .ds_wrapper.ds_brdr_both, .ds_container_mobile .ds_wrapper.ds_brdr_top, .ds_container_mobile .ds_wrapper.ds_brdr_bottom {
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    border-bottom: 0 none; }
 .ds_container_mobile.ds_container_full .ds_wrapper {
   grid-template-columns: repeat(6, 1fr);
   grid-gap: 0;
@@ -51,68 +54,68 @@
   border-top-width: 0;
   border-bottom-width: 0; }
   .ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn {
-	width: auto;
-	border-radius: 0; }
-	.ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn.ds_text a svg.icon {
-	  display: inherit; }
-	.ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn.ds_text a span.ds_network_name {
-	  display: none; }
-	.ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn.ds_mixed {
-	  width: auto; }
-	  .ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn.ds_mixed a div.anchor-grid {
-		grid-template-columns: 1fr; }
+    width: auto;
+    border-radius: 0; }
+    .ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn.ds_text a svg.icon {
+      display: inherit; }
+    .ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn.ds_text a span.ds_network_name {
+      display: none; }
+    .ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn.ds_mixed {
+      width: auto; }
+      .ds_container_mobile.ds_container_full .ds_wrapper .ds_bttn.ds_mixed a div.anchor-grid {
+        grid-template-columns: 1fr; }
 
 .ds_wrapper {
   margin-bottom: 20px;
   display: grid;
   grid-gap: 6px; }
   .ds_wrapper.ds_has_heading {
-	grid-template-columns: repeat(6, auto); }
+    grid-template-columns: repeat(6, auto); }
   .ds_wrapper.ds_no_heading {
-	grid-template-columns: repeat(5, auto); }
+    grid-template-columns: repeat(5, auto); }
   .ds_wrapper.ds_align_left {
-	justify-content: left; }
+    justify-content: left; }
   .ds_wrapper.ds_align_right {
-	justify-content: right; }
+    justify-content: right; }
   .ds_wrapper.ds_align_center {
-	justify-content: center; }
+    justify-content: center; }
   .ds_wrapper.ds_brdr_top {
-	border-top: 1px solid;
-	padding-top: 10px;
-	border-bottom: 0 none; }
+    border-top: 1px solid;
+    padding-top: 10px;
+    border-bottom: 0 none; }
   .ds_wrapper.ds_brdr_bottom {
-	border-top: 0 none;
-	border-bottom: 1px solid;
-	padding-bottom: 10px; }
+    border-top: 0 none;
+    border-bottom: 1px solid;
+    padding-bottom: 10px; }
   .ds_wrapper.ds_brdr_both {
-	border-top: 1px solid;
-	padding-top: 10px;
-	border-bottom: 1px solid;
-	padding-bottom: 10px; }
+    border-top: 1px solid;
+    padding-top: 10px;
+    border-bottom: 1px solid;
+    padding-bottom: 10px; }
   .ds_wrapper .ds_heading {
-	line-height: 2em; }
+    line-height: 2em; }
 
 .ds_wrapper.ds_wrapper_mobile {
   grid-template-columns: repeat(6, auto); }
   .ds_wrapper.ds_wrapper_mobile .ds_heading {
-	display: none; }
+    display: none; }
   .ds_wrapper.ds_wrapper_mobile .ds_bttn a {
-	display: inline; }
-	.ds_wrapper.ds_wrapper_mobile .ds_bttn a svg.icon {
-	  display: inherit; }
-	.ds_wrapper.ds_wrapper_mobile .ds_bttn a span.ds_network_name {
-	  display: none; }
+    display: inline; }
+    .ds_wrapper.ds_wrapper_mobile .ds_bttn a svg.icon {
+      display: inherit; }
+    .ds_wrapper.ds_wrapper_mobile .ds_bttn a span.ds_network_name {
+      display: none; }
   .ds_wrapper.ds_wrapper_mobile .ds_bttn.ds_mixed {
-	width: 2em; }
-	.ds_wrapper.ds_wrapper_mobile .ds_bttn.ds_mixed a div.anchor-grid {
-	  align-items: center;
-	  justify-items: center; }
-	.ds_wrapper.ds_wrapper_mobile .ds_bttn.ds_mixed a div span.anchor-item:nth-child(2) {
-	  display: none; }
+    width: 2em; }
+    .ds_wrapper.ds_wrapper_mobile .ds_bttn.ds_mixed a div.anchor-grid {
+      align-items: center;
+      justify-items: center; }
+    .ds_wrapper.ds_wrapper_mobile .ds_bttn.ds_mixed a div span.anchor-item:nth-child(2) {
+      display: none; }
 
 @media screen and (max-width: 600px) {
   .ds_wrapper .ds_heading {
-	display: none; } }
+    display: none; } }
 /***********************************
 ## BUTTONS
 ***********************************/
@@ -123,28 +126,28 @@
   text-align: center;
   transition: all 1s; }
   .ds_wrapper .ds_bttn:hover {
-	opacity: 0.8; }
+    opacity: 0.8; }
   .ds_wrapper .ds_bttn a {
-	text-decoration: none;
-	box-shadow: none;
-	text-transform: capitalize;
-	border-bottom: 0 none;
-	display: block;
-	width: 100%;
-	height: 100%;
-	transition: all 1s; }
-	.ds_wrapper .ds_bttn a svg {
-	  position: relative;
-	  width: 1em;
-	  height: 1em;
-	  vertical-align: middle; }
-	.ds_wrapper .ds_bttn a span.ds_network_name {
-	  display: none;
-	  font-size: 0.8em; }
-	.ds_wrapper .ds_bttn a:hover {
-	  text-decoration: none;
-	  box-shadow: none;
-	  border-bottom: 0 none; }
+    text-decoration: none;
+    box-shadow: none;
+    text-transform: capitalize;
+    border-bottom: 0 none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    transition: all 1s; }
+    .ds_wrapper .ds_bttn a svg {
+      position: relative;
+      width: 1em;
+      height: 1em;
+      vertical-align: middle; }
+    .ds_wrapper .ds_bttn a span.ds_network_name {
+      display: none;
+      font-size: 0.8em; }
+    .ds_wrapper .ds_bttn a:hover {
+      text-decoration: none;
+      box-shadow: none;
+      border-bottom: 0 none; }
 
 .ds_bttn.ds_square {
   border-radius: 0; }
@@ -173,56 +176,56 @@
   background-color: #fff;
   box-shadow: 1px 1px 1px 1px #c5c5c5; }
   .ds_bttn.ds_shadow.ds_facebook svg.icon {
-	fill: #4367b1; }
+    fill: #4367b1; }
   .ds_bttn.ds_shadow.ds_twitter svg.icon {
-	fill: #1fa0f3; }
+    fill: #1fa0f3; }
   .ds_bttn.ds_shadow.ds_linkedin svg.icon {
-	fill: #0277b5; }
+    fill: #0277b5; }
   .ds_bttn.ds_shadow.ds_googleplus svg.icon {
-	fill: #da4638; }
+    fill: #da4638; }
   .ds_bttn.ds_shadow.ds_pinterest svg.icon {
-	fill: #bd081c; }
+    fill: #bd081c; }
   .ds_bttn.ds_shadow.ds_whatsapp svg.icon {
-	fill: #06e676; }
+    fill: #06e676; }
   .ds_bttn.ds_shadow.ds_facebook a span.ds_network_name {
-	color: #4367b1; }
+    color: #4367b1; }
   .ds_bttn.ds_shadow.ds_twitter a span.ds_network_name {
-	color: #1fa0f3; }
+    color: #1fa0f3; }
   .ds_bttn.ds_shadow.ds_linkedin a span.ds_network_name {
-	color: #0277b5; }
+    color: #0277b5; }
   .ds_bttn.ds_shadow.ds_googleplus a span.ds_network_name {
-	color: #da4638; }
+    color: #da4638; }
   .ds_bttn.ds_shadow.ds_pinterest a span.ds_network_name {
-	color: #bd081c; }
+    color: #bd081c; }
   .ds_bttn.ds_shadow.ds_whatsapp a span.ds_network_name {
-	color: #06e676; }
+    color: #06e676; }
 .ds_bttn.ds_shadow_inset {
   background-color: #fff;
   box-shadow: inset 1px 1px 1px 1px #c5c5c5; }
   .ds_bttn.ds_shadow_inset.ds_facebook svg.icon {
-	fill: #4367b1; }
+    fill: #4367b1; }
   .ds_bttn.ds_shadow_inset.ds_twitter svg.icon {
-	fill: #1fa0f3; }
+    fill: #1fa0f3; }
   .ds_bttn.ds_shadow_inset.ds_linkedin svg.icon {
-	fill: #0277b5; }
+    fill: #0277b5; }
   .ds_bttn.ds_shadow_inset.ds_googleplus svg.icon {
-	fill: #da4638; }
+    fill: #da4638; }
   .ds_bttn.ds_shadow_inset.ds_pinterest svg.icon {
-	fill: #bd081c; }
+    fill: #bd081c; }
   .ds_bttn.ds_shadow_inset.ds_whatsapp svg.icon {
-	fill: #06e676; }
+    fill: #06e676; }
   .ds_bttn.ds_shadow_inset.ds_facebook a span.ds_network_name {
-	color: #4367b1; }
+    color: #4367b1; }
   .ds_bttn.ds_shadow_inset.ds_twitter a span.ds_network_name {
-	color: #1fa0f3; }
+    color: #1fa0f3; }
   .ds_bttn.ds_shadow_inset.ds_linkedin a span.ds_network_name {
-	color: #0277b5; }
+    color: #0277b5; }
   .ds_bttn.ds_shadow_inset.ds_googleplus a span.ds_network_name {
-	color: #da4638; }
+    color: #da4638; }
   .ds_bttn.ds_shadow_inset.ds_pinterest a span.ds_network_name {
-	color: #bd081c; }
+    color: #bd081c; }
   .ds_bttn.ds_shadow_inset.ds_whatsapp a span.ds_network_name {
-	color: #06e676; }
+    color: #06e676; }
 .ds_bttn.ds_grey, .ds_bttn.ds_grey_default, .ds_bttn.ds_grey_white, .ds_bttn.ds_grey_black {
   background-color: #c5c5c5; }
 .ds_bttn.ds_grey_default.ds_facebook svg.icon {
@@ -260,15 +263,15 @@
 .ds_bttn.ds_black {
   background-color: #000; }
   .ds_bttn.ds_black svg.icon {
-	fill: #fff; }
+    fill: #fff; }
   .ds_bttn.ds_black span.ds_network_name {
-	color: #fff; }
+    color: #fff; }
 .ds_bttn.ds_white {
   background-color: #fff; }
   .ds_bttn.ds_white svg.icon {
-	fill: #000; }
+    fill: #000; }
   .ds_bttn.ds_white span.ds_network_name {
-	color: #000; }
+    color: #000; }
 .ds_bttn.ds_nobg, .ds_bttn.ds_nobg_default, .ds_bttn.ds_nobg_white, .ds_bttn.ds_nobg_black {
   background-color: transparent; }
 .ds_bttn.ds_nobg_default.ds_facebook svg.icon {
@@ -307,29 +310,29 @@
 .ds_bttn.ds_text {
   width: auto; }
   .ds_bttn.ds_text a {
-	display: inline;
-	padding: 4px 8px; }
-	.ds_bttn.ds_text a svg.icon {
-	  display: none; }
-	.ds_bttn.ds_text a span.ds_network_name {
-	  display: inherit; }
+    display: inline;
+    padding: 4px 8px; }
+    .ds_bttn.ds_text a svg.icon {
+      display: none; }
+    .ds_bttn.ds_text a span.ds_network_name {
+      display: inherit; }
   .ds_bttn.ds_text.ds_circle {
-	border-radius: 4px; }
+    border-radius: 4px; }
 .ds_bttn.ds_mixed {
   width: auto; }
   .ds_bttn.ds_mixed a .anchor-grid {
-	display: grid;
-	grid-template-columns: 2em minmax(100px, auto);
-	grid-template-rows: 2em; }
-	.ds_bttn.ds_mixed a .anchor-grid span.anchor-item span.ds_network_name {
-	  display: inline; }
-	.ds_bttn.ds_mixed a .anchor-grid span.anchor-item:nth-child(2) {
-	  background-color: rgba(0, 0, 0, 0.1);
-	  transition: all 1s;
-	  padding: 0 4px; }
+    display: grid;
+    grid-template-columns: 2em minmax(100px, auto);
+    grid-template-rows: 2em; }
+    .ds_bttn.ds_mixed a .anchor-grid span.anchor-item span.ds_network_name {
+      display: inline; }
+    .ds_bttn.ds_mixed a .anchor-grid span.anchor-item:nth-child(2) {
+      background-color: rgba(0, 0, 0, 0.1);
+      transition: all 1s;
+      padding: 0 4px; }
   .ds_bttn.ds_mixed a:hover .anchor-grid span.anchor-item:nth-child(2) {
-	opacity: 0.6; }
+    opacity: 0.6; }
   .ds_bttn.ds_mixed.ds_circle {
-	border-radius: 4px; }
+    border-radius: 4px; }
 
 /*# sourceMappingURL=drim-share.css.map */
