--- a/public/css/sass/_container_mobile.scss
+++ b/public/css/sass/_container_mobile.scss
@@ -8,10 +8,17 @@
     margin-bottom: 0;
     border-bottom-width: 0;
     padding: 6px;
-    background-color: #fff;
+    background-color: rgba(255,255,255,0.95);
     z-index: 9999;
     grid-gap: 6px;
     grid-template-columns: repeat(6, auto);
+
+    &.ds_brdr_both,
+    &.ds_brdr_top,
+    &.ds_brdr_bottom {
+      border-top: 1px solid rgba(0,0,0,0.05);
+      border-bottom: 0 none;
+    }
 
   }
 
